force-app/main/default/objects/PriceListH__c/PriceListH__c.object-meta.xml
<CustomObject>
    <label>Price List (H)</label>
    <nameField>
        <label>Price Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Lists (H)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>