force-app/main/default/objects/PriceListH__c/fields/ImportId__c.field-meta.xml
<CustomField>
    <fullName>ImportId__c</fullName>
    <externalId>true</externalId>
    <label>Import Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>