force-app/main/default/objects/PriceListH__c/fields/ItemID__c.field-meta.xml
<CustomField>
    <fullName>ItemID__c</fullName>
    <label>Item Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>