force-app/main/default/objects/PriceListH__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>PriceListH__c</referenceTo>
    <relationshipName>Price_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>