force-app/main/default/objects/PriceListH__c/fields/ParentItemID__c.field-meta.xml
<CustomField>
    <fullName>ParentItemID__c</fullName>
    <label>Parent Item Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>